# example-app

./: .gitignore  CMakeLists.txt  PMCTS.cpp  PMCTS.h  README.md  changelog.txt  consts.h  dirichlet.cpp  dirichlet.h  elo.cpp  elo.h  evalcache.cpp  evalcache.h  game.py  gamerules.cpp  gamerules.h  greatkingdom.ipynb  hash.cpp  hash.h  main.cpp  memorypool.h  neuralNet.cpp  policyvalue.cpp  policyvalue.h  random.cpp  random.h  rotation.cpp  rotation.h  run.sh  run_train.txt  train.cpp  train.h
models/: modele100.pt  modele1000.pt  modele10500.pt  modele10600.pt  modele10700.pt  modele10900.pt  modele11100.pt  modele11500.pt  modele11600.pt  modele12000.pt  modele12100.pt  modele12300.pt  modele12500.pt  modele12600.pt  modele12700.pt  modele13000.pt  modele13100.pt  modele13200.pt  modele13500.pt  modele13700.pt  modele13800.pt  modele13900.pt  modele14000.pt  modele14300.pt  modele14900.pt  modele15100.pt  modele15300.pt  modele15400.pt  modele15600.pt  modele15700.pt  modele15900.pt  modele16100.pt  modele16200.pt  modele16400.pt  modele16800.pt  modele16900.pt  modele1700.pt  modele17000.pt  modele17100.pt  modele17400.pt  (+47 more)
models/btype/: b_rating.txt  modelb100.pt  modelb1000.pt  modelb10000.pt  modelb1100.pt  modelb1200.pt  modelb1300.pt  modelb1400.pt  modelb1500.pt  modelb1600.pt  modelb1700.pt  modelb1800.pt  modelb1900.pt  modelb200.pt  modelb2000.pt  modelb2100.pt  modelb2200.pt  modelb2300.pt  modelb2400.pt  modelb2500.pt  modelb2600.pt  modelb2700.pt  modelb2800.pt  modelb2900.pt  modelb300.pt  modelb3000.pt  modelb3100.pt  modelb3200.pt  modelb3300.pt  modelb3400.pt  modelb3500.pt  modelb3600.pt  modelb3700.pt  modelb3800.pt  modelb3900.pt  modelb400.pt  modelb4000.pt  modelb4100.pt  modelb4200.pt  modelb4300.pt  (+61 more)
models/ctype/: modelc100.pt  modelc1000.pt  modelc1100.pt  modelc1200.pt  modelc1300.pt  modelc1400.pt  modelc1500.pt  modelc1600.pt  (+32 more)
unused/: MCTS.cpp  MCTS.h  MPMCQueue.cpp  MPMCQueue.h  multimcts.cpp  multimcts.h  threadpool.cpp  threadpool.h
(+322 files in other folders)
